--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body style="background-image:url(Images/a.jpg)">
 
     <div class="container">
-        <div id="loginbox" style="margin-top:80px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div id="loginbox" style="margin-top:20%;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <div class="panel-title">Login</div>
                     
                 </div>
-                <div style="padding-top:50px ; background-image:url(Images/b.png)"  class="panel-body">
+                <div style="padding-top:20% ; background-image:url(Images/b.png)"  class="panel-body">
                   
 
                     <form id="loginform" class="form-horizontal" role="form">
